--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin &raquo; Dashboard</h1>
+<div class='well'>
+  <h3>Total Number of Products in Store: <%= @product_count %></h3>
+  <h3>Total Number of Product Categories in Store: <%= @category_count %></h3>
+</div>
