--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,11 +2,11 @@
 
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
-    <h1>Order Email:<%= @order.email %></h1>
+    <h3>Order Email:<%= @order.email %></h3>
   </header>
 
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!%></h4>
+    <h4>Thank you for your order!</h4>
   </div>
 
   <div class="panel panel-default items">
@@ -20,8 +20,8 @@
       </tr>
     </thead>
     <tbody>
-      <% order.line_items.each do |item| %>
-        <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
+      <% @order.line_items.each do |item| %>
+        <%= render 'item', product: item.product, quantity: item.quantity.to_i %>
       <% end %>
     </tbody>
     <tfoot>
