--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -42,6 +42,18 @@
             <li><%= link_to 'Categories',  [:admin, :categories] %></li>
           </ul>
         </li>
+        <% if current_user%>
+          <li><%= link_to current_user.email %></li>
+          <li><%= link_to 'Logout', logout_path %></li>
+        <% else %>
+          <li>
+            <%= link_to 'Register', new_user_path %>
+          </li>
+          <li>
+            <%= link_to 'Login', new_session_path %>
+          </li>
+        <% end%>
+        
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
